@@ -7,7 +7,9 @@ CVS - Eric Kidd <eric.kidd@pobox.com> - 25 January 2000
   * Added internal implementation of system.multicall, lots of brutal test
     cases, and stubs for other system.* commands.
   * Added APIs for accessing CGI and Abyss method registries.
-  * Implemented system.listMethods.
+  * Implemented system.listMethods, system.methodHelp.
+  * Fixed stupid bug in parsing of "(ss*)"-style array descriptions
+    where there were no extra elements.
 
 0.9.5 - Eric Kidd <eric.kidd@pobox.com> - 20 January 2000
 
